--- a/src/pages/Portfolio/wrapper/portfolioWrapper.module.css
+++ b/src/pages/Portfolio/wrapper/portfolioWrapper.module.css
@@ -5,6 +5,8 @@
     padding: 0 20px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     width: 100%;
+    position: fixed;
+    top: 0;
 }
 
 .nav a{
