--- a/src/index.css
+++ b/src/index.css
@@ -14,16 +14,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
+  
   margin: 0;
   display: flex;
   place-items: center;
@@ -31,28 +23,11 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+@media (min-width:1700px) {
+	main .container {
+		max-width: 100%;
+		padding: 0 150px;
+	}
 }
 
 @media (prefers-color-scheme: light) {
@@ -60,10 +35,38 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+  nav button {
+    color: #213547;
+    background-color: #ffffff;
+  }
+
+  a {
+    color: #213547;
+  }
   a:hover {
-    color: #747bff;
+    color: #f30889;
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #ffffff;
+    background-color: #000000;
+  }
+  nav button {
+    color: #ffffff;
+    background-color: #000000;
+  }
+  a {
+    color: #ffffff;
+  }
+  a:hover {
+    color: #f30889;
+  }
+  button {
+    background-color: #1f1f1f;
   }
 }
