--- a/src/index.css
+++ b/src/index.css
@@ -65,13 +65,17 @@ span {
 [data-theme= "dark"] {
   --bg : #000000;
   --color: #ffffff;
-
+  --main-color: #f30889;
+  --input-bg: hsla(208, 50%, 50%, 6.5%);
+  --input-bg-hover: hsla(208, 50%, 50%, 14%);
 }
 
 [data-theme= "light"] {
   --bg : #ffffff;
   --color: #000000;
-  
+  --main-color: #f30889;
+  --input-bg: hsla(208, 50%, 50%, 6.5%);
+  --input-bg-hover: hsla(208, 50%, 50%, 14%);
 }
 
 
