--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ span {
   --main-color: #f30889;
   --input-bg: hsla(208, 50%, 50%, 6.5%);
   --input-bg-hover: hsla(208, 50%, 50%, 14%);
+  --bgImg: url("/src/pages/Portfolio/components/about-me/assets/img/banner-bgd.png");
 }
 
 [data-theme= "light"] {
@@ -76,6 +77,7 @@ span {
   --main-color: #f30889;
   --input-bg: hsla(208, 50%, 50%, 6.5%);
   --input-bg-hover: hsla(208, 50%, 50%, 14%);
+  --bgImg: url("/src/pages/Portfolio/components/about-me/assets/img/banner-bg.png");
 }
 
 
