--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ html{
 body{
   font-weight: 400;
   overflow-x: hidden;
+  overflow-y: auto;
   position: relative;
   
   font-family: 'Centra', sans-serif !important;  
