--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ span {
   --input-bg: hsla(208, 50%, 50%, 6.5%);
   --input-bg-hover: hsla(208, 50%, 50%, 14%);
   --bgImg: url("/src/pages/Portfolio/components/about-me/assets/img/banner-bgd.png");
+  --opacity: 100;
 }
 
 [data-theme= "light"] {
@@ -82,8 +83,9 @@ span {
   --input-bg: hsla(208, 50%, 50%, 6.5%);
   --input-bg-hover: hsla(208, 50%, 50%, 14%);
   --bgImg: url("/src/pages/Portfolio/components/about-me/assets/img/banner-bg.png");
+  --opacity: ;
 }
-
+ 
 
 @media (prefers-color-scheme: light) {
   :root {
