--- a/src/index.css
+++ b/src/index.css
@@ -70,8 +70,8 @@ span {
   --bg : #000000;
   --color: #ffffff;
   --main-color: #f30889;
-  --input-bg: hsla(208, 50%, 50%, 6.5%);
-  --input-bg-hover: hsla(208, 50%, 50%, 14%);
+  --input-bg: #000000c1;
+  --input-bg-hover: #000000;
   --bgImg: url("/src/pages/Portfolio/components/about-me/assets/img/banner-bgd.png");
   --opacity: 100;
   --navbarShadow: 0 2px 10px rgba(255, 255, 255, 0.4);
@@ -81,8 +81,8 @@ span {
   --bg : #ffffff;
   --color: #000000;
   --main-color: #f30889;
-  --input-bg: hsla(208, 50%, 50%, 6.5%);
-  --input-bg-hover: hsla(208, 50%, 50%, 14%);
+  --input-bg: #ffffffd6;
+  --input-bg-hover: #ffffff;
   --bgImg: url("/src/pages/Portfolio/components/about-me/assets/img/banner-bg.png");
   --opacity: ;
   --navbarShadow: 0 2px 10px rgba(0,0,0,0.1);
