--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 
 }
 
+
+
 body {
   
   margin: 0;
@@ -34,7 +36,7 @@ body {
 }
 
 a {
-  color: var(--color);
+  color: var(--color); 
 }
 a:hover {
   color: #f30889;
@@ -42,6 +44,10 @@ a:hover {
 
 span {
   color: var(--color);
+}
+
+input, select, textarea {
+  -webkit-text-size-adjust: none;
 }
 
 .transition {
